@@ -13,7 +13,8 @@ For editing language files in The Conquerors, I recommend [url=http://aok.heaven
 Guide makers et cetera, please include the version into which your guide was written.
 
 Version [b]2015.12.11[/b]:
--Added option to merge shadow from another SLP.
+-Added copy sounds from civ to civ button to sounds tab.
+-Added an option to merge shadow from another SLP.
 
 Version [b]2015.12.2[/b]:
 -Terrain restriction tab updated.
